<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Datalogics PDF Web API Library</string>
    <string name="title_activity_pdfweb_apisample">PDFWebAPISampleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="decorate_request">Decorate</string>
    <string name="properties_request">Properties</string>
    <string name="render_request">Render</string>
    <string name="input_file">Input File</string>
    <string name="output_file">Output File</string>
    <string name="send_request">Send Request</string>

</resources>
