<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.datalogics.pdf.web.sample.PDFWebAPISampleActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_file"
        android:id="@+id/inputFileTextView"
        android:layout_below="@+id/requestRadioGroup"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="19dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="84dp"
        android:id="@+id/requestRadioGroup"
        android:focusableInTouchMode="false">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/render_request"
            android:id="@+id/renderRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/properties_request"
            android:id="@+id/propertiesRadioButton"
            android:layout_below="@+id/decorateRadioButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decorate_request"
            android:id="@+id/decorateRadioButton"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/propertiesRadioButton"
            android:layout_alignEnd="@+id/propertiesRadioButton"
            android:checked="false" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_file"
        android:id="@+id/textView2"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/inputFileTextView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="extra 1"
        android:id="@+id/extraTextView1"
        android:layout_marginTop="38dp"
        android:visibility="invisible"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="extra2"
        android:id="@+id/extraTextView2"
        android:layout_marginTop="29dp"
        android:visibility="invisible"
        android:layout_below="@+id/extraTextView1"
        android:layout_alignLeft="@+id/extraTextView1"
        android:layout_alignStart="@+id/extraTextView1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputFileTextField"
        android:inputType="text"
        android:hint="input file name"
        android:layout_below="@+id/requestRadioGroup"
        android:layout_toRightOf="@+id/requestRadioGroup"
        android:layout_marginLeft="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/outputFileTextField"
        android:hint="output file name"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/inputFileTextField"
        android:layout_alignStart="@+id/inputFileTextField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/extraTextField1"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/extraTextView1"
        android:layout_alignLeft="@+id/outputFileTextField"
        android:layout_alignStart="@+id/outputFileTextField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/extraTextField2"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/extraTextView2"
        android:layout_alignLeft="@+id/extraTextField1"
        android:layout_alignStart="@+id/extraTextField1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_request"
        android:id="@+id/requestButton"
        android:layout_alignTop="@+id/requestRadioGroup"
        android:layout_toRightOf="@+id/extraTextField1" />

</RelativeLayout>
